Update: TCAS-779 fixes for translations not showing on game tile play button

--- a/src/components/GameTile/GameTile.scss
+++ b/src/components/GameTile/GameTile.scss
@@ -10,10 +10,8 @@
     display: flex !important;
   }
 
-  svg {
-    .c-game-tile-heart {
-      fill: #fff;
-    }
+  .c-game-tile-heart {
+    fill: #fff;
   }
 }
 
